2009-04-09  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/preadv.c: Avoid prototype for static
	function if it is not defined.  Add some necessary casts.
	* sysdeps/unix/sysv/linux/pwritev.c: Likewise.

	* sysdeps/unix/sysv/linux/kernel-features.h: SPARC and IA64 also
	have preadv/pwritev in 2.6.30.

2009-04-08  Ulrich Drepper  <drepper@redhat.com>

	* malloc/malloc.c (malloc_info): New function.
	* malloc/malloc.h: Declare it.
	* malloc/Versions: Export malloc_info for GLIBC_2.10.

	* sysdeps/unix/sysv/linux/preadv64.c (PREAD): Use __libc_pread64
	to avoid PLT slot.

	* malloc/malloc.c (_int_realloc): Add parameter with old block
	size.  Remove duplicated test.  Don't handle mmap'ed blocks here.
	Adjust all callers.
	* malloc/hooks.c (realloc_check): Adjust _int_realloc call.

2009-04-07  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/x86_64/strchrnul.S: New file.

	* crypt/Makefile (LDLIBS-crypt.so): Use this variable instead of
	depending libcrypt on -lfreebl3.

	* sysdeps/unix/sysv/linux/kernel-features.h: Power also has
	preadv/pwritev in 2.6.30.

	* resolv/nss_dns/dns-host.c (getanswer_r): Use strcasecmp
	instead of __strcasecmp.

	* string/stratcliff.c (do_test): Add memchr tests..
	* wcsmbs/wcsatcliff.c (MEMCHR): Define.
	* sysdeps/x86_64/memchr.S: Fix handling of end of buffer after
	first read quad word.

2009-04-06  Ulrich Drepper  <drepper@redhat.com>

	* string/strverscmp.c (__strverscmp): Fix last cleanups.
	* string/tst-svc.input: Add new test case.
	* string/tst-svc.expect: Adjust.
	* string/Makefile: Don't ignore tst-svc error.

	* sysdeps/x86_64/memchr.S: New file.

	* resolv/resolv.h (RES_SNGLKUP): Define.
	* resolv/res_init.c (res_setoptions): Recognize single-request option.
	* resolv/res_send.c (send_dg): If we sent two requests at once and
	only get one reply before timeout switch to mode where we send the
	second request only after the first answer has been received.

2009-04-05  Ulrich Drepper  <drepper@redhat.com>
